--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <!-- Conteneur principal -->
     <div id="app">
         <!-- Bannière -->
-        <div class="banner-container">
-            <img id="banner-image" src="" alt="Bannière thématique">
-        </div>
+       <div class="diceman-container">
+    <img id="diceman-image" src="" alt="Image du DiceMan">
+</div>
+
+<!-- Contrôle de la musique -->
+<div class="music-control">
+    <button id="play-music">▶️ Play Music</button>
+    <button id="pause-music">⏸ Pause Music</button>
+</div>
 
         <!-- Image du DiceMan -->
         <div class="diceman-container">
