--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
         
-   <!-- Contrôle de la musique -->
+        <!-- Contrôle de la musique -->
         <div class="music-control">
             <button id="play-music">▶️ Play Music</button>
             <button id="pause-music">⏸ Pause Music</button>
@@ -51,7 +51,34 @@
             <p>Or...</p>
             <button id="chaos-btn">CHAOS !!</button>
         </div>
-     
+
+        <!-- Dés et phrases associées -->
+        <div class="dice-container">
+            <div class="dice" id="dice-1">
+                <img src="" alt="Dice 1" class="dice-image">
+                <p class="dice-phrase">Phrase 1</p>
+            </div>
+            <div class="dice" id="dice-2">
+                <img src="" alt="Dice 2" class="dice-image">
+                <p class="dice-phrase">Phrase 2</p>
+            </div>
+            <div class="dice" id="dice-3">
+                <img src="" alt="Dice 3" class="dice-image">
+                <p class="dice-phrase">Phrase 3</p>
+            </div>
+            <div class="dice" id="dice-4">
+                <img src="" alt="Dice 4" class="dice-image">
+                <p class="dice-phrase">Phrase 4</p>
+            </div>
+            <div class="dice" id="dice-5">
+                <img src="" alt="Dice 5" class="dice-image">
+                <p class="dice-phrase">Phrase 5</p>
+            </div>
+            <div class="dice" id="dice-6">
+                <img src="" alt="Dice 6" class="dice-image">
+                <p class="dice-phrase">Phrase 6</p>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
