--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+   <!-- Bouton Roll the Dice -->
+<div class="roll-dice-container">
+    <button id="roll-dice-btn">ROLL THE DICE</button>
+</div>
+
+<!-- Section pour la phrase Description -->
+<div class="description-container">
+    <p id="dice-description">...</p>
+</div>
+
+<script src="script.js"></script>
 </body>
+
 </html>
