--- a/index.html
+++ b/index.html
@@ -53,45 +53,44 @@
         </div>
 
         <!-- Dés et phrases associées -->
-        <div class="dice-container">
+        <div class="dice-container" id="dice-container">
             <div class="dice" id="dice-1">
                 <img src="" alt="Dice 1" class="dice-image">
-                <p class="dice-phrase">Phrase 1</p>
+                <p class="dice-phrase"></p>
             </div>
             <div class="dice" id="dice-2">
                 <img src="" alt="Dice 2" class="dice-image">
-                <p class="dice-phrase">Phrase 2</p>
+                <p class="dice-phrase"></p>
             </div>
             <div class="dice" id="dice-3">
                 <img src="" alt="Dice 3" class="dice-image">
-                <p class="dice-phrase">Phrase 3</p>
+                <p class="dice-phrase"></p>
             </div>
             <div class="dice" id="dice-4">
                 <img src="" alt="Dice 4" class="dice-image">
-                <p class="dice-phrase">Phrase 4</p>
+                <p class="dice-phrase"></p>
             </div>
             <div class="dice" id="dice-5">
                 <img src="" alt="Dice 5" class="dice-image">
-                <p class="dice-phrase">Phrase 5</p>
+                <p class="dice-phrase"></p>
             </div>
             <div class="dice" id="dice-6">
                 <img src="" alt="Dice 6" class="dice-image">
-                <p class="dice-phrase">Phrase 6</p>
+                <p class="dice-phrase"></p>
             </div>
+        </div>
+
+        <!-- Bouton Roll the Dice -->
+        <div class="roll-dice-container">
+            <button id="roll-dice-btn">ROLL THE DICE</button>
+        </div>
+
+        <!-- Section pour la phrase Description -->
+        <div class="description-container" id="description-container">
+            <p id="dice-description">...</p>
         </div>
     </div>
 
-   <!-- Bouton Roll the Dice -->
-<div class="roll-dice-container">
-    <button id="roll-dice-btn">ROLL THE DICE</button>
-</div>
-
-<!-- Section pour la phrase Description -->
-<div class="description-container">
-    <p id="dice-description">...</p>
-</div>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
