--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         </div>
 
         <!-- Section pour la phrase Description -->
-        <div class="description-container" id="description-container">
-            <p id="dice-description">...</p>
-        </div>
+<div class="description-container">
+    <p id="dice-description">...</p>
+</div>
     </div>
 
     <script src="script.js"></script>
