--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
         
-        <!-- Contrôle de la musique -->
-        <div class="music-control">
-            <button id="play-music">▶️ Play Music</button>
-            <button id="pause-music">⏸ Pause Music</button>
-        </div>
+       <!-- Contrôle de la musique -->
+<div class="music-control">
+    <button id="play-music">▶️ Play Music</button>
+    <button id="pause-music">⏸ Pause Music</button>
+    <a id="buy-me-button" href="https://www.buymeacoffee.com/tonlien" target="_blank">Buy Me a Coffee</a>
+</div>
         
         <!-- Image du DiceMan -->
         <div class="diceman-container">
