--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
         
-       <!-- Contrôle de la musique -->
-<div class="music-control">
+      <div class="music-control">
     <button id="play-music">▶️ Play Music</button>
     <button id="pause-music">⏸ Pause Music</button>
-    <a id="buy-me-button" href="https://www.buymeacoffee.com/tonlien" target="_blank">Buy Me a Coffee</a>
+    <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-button">
+        <img src="https://ko-fi.com/img/cup-border.png" alt="Buy Me a Coffee" style="height: 40px;">
+    </a>
 </div>
+
         
         <!-- Image du DiceMan -->
         <div class="diceman-container">
