--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
         
-      <div class="music-control">
+      <!-- Contrôle de la musique -->
+<div class="music-control">
     <button id="play-music">▶️ Play Music</button>
     <button id="pause-music">⏸ Pause Music</button>
-    <a href="https://ko-fi.com/dicemanschaos" target="_blank" id="buy-me-button">
-        <img src="https://ko-fi.com/img/cup-border.png" alt="Buy Me a Coffee" style="height: 40px;">
-    </a>
+    <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank">Buy Me a Coffee</a>
 </div>
+
 
         
         <!-- Image du DiceMan -->
