--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
         
-      <!-- Contrôle de la musique -->
-<div class="music-control">
+      <div class="music-control">
     <button id="play-music">▶️ Play Music</button>
     <button id="pause-music">⏸ Pause Music</button>
-    <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank">Buy Me a Coffee</a>
+    <button id="buy-me-button">Buy Me a Coffee</button>
 </div>
-
 
         
         <!-- Image du DiceMan -->
