--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Diceman's Chaos</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    
+    <!-- Footer -->
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
+        <a href="mentions-legales.html">Legal Notice</a> | 
+        <a href="cookie-policy.html">Cookie Policy</a> | 
+        <a href="privacy-policy.html">Privacy Policy</a> | 
+        <a href="https://www.facebook.com/DiceMansChaos/" target="_blank">Follow us on Facebook</a>
+        <p id="about-section">🎲 **About Diceman’s Chaos** 🎲 <br>
+        Put your fate in a roll! This project is about embracing randomness and letting destiny guide your choices.</p>
+    </div>
+</footer>
+
+<!-- Bannière de cookies -->
+<div id="cookie-banner">
+    <p>This website uses cookies to ensure you get the best experience. <a href="cookie-policy.html">Learn more</a></p>
+    <button id="accept-cookies">Accept</button>
+</div>
+
 <body>
     <div id="app">
         <!-- Bannière -->
