--- a/index.html
+++ b/index.html
@@ -104,16 +104,19 @@
                 <p id="about-section">🎲 <b>About Diceman’s Chaos</b> 🎲 <br>
                 Put your fate in a roll! This project is about embracing randomness and letting destiny guide your choices.</p>
             </div>
-        </footer>
+         </footer>
 
-        <!-- Bannière de cookies -->
-        <div id="cookie-banner">
-            <p>This website uses cookies to ensure you get the best experience. <a href="cookie-policy.html">Learn more</a></p>
-            <button id="accept-cookies">Accept</button>
-        </div>
-
+    <!-- Bannière de cookies (Placée en dehors de #app) -->
+    <div id="cookie-banner" style="display: none;">
+        <p>This website uses cookies to ensure you get the best experience. 
+            <a href="cookie-policy.html">Learn more</a>
+        </p>
+        <button id="accept-cookies">Accept</button>
     </div>
 
+    </div> <!-- Fin de #app -->
+
+    <!-- Chargement du script JS -->
     <script src="script.js"></script>
 
 </body>
