--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <!-- ✅ Open Graph (Facebook, Twitter & Social Sharing) -->
     <meta property="og:title" content="Diceman's Chaos - Put Your Fate in a Roll">
     <meta property="og:description" content="A fun, chaotic way to let fate decide your next move! Roll the dice and embrace randomness.">
-    <meta property="og:image" content="https://dicemanschaos.netlify.app/images/preview.jpg"> <!-- À mettre à jour -->
+    <meta property="og:image" content="https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg"> 
     <meta property="og:url" content="https://dicemanschaos.netlify.app">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Diceman's Chaos - Put Your Fate in a Roll">
     <meta name="twitter:description" content="A fun, chaotic way to let fate decide your next move! Roll the dice and embrace randomness.">
-    <meta name="twitter:image" content="https://dicemanschaos.netlify.app/images/preview.jpg">
+    <meta name="twitter:image" content="https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg">
 
     <!-- ✅ Préchargement du CSS pour accélérer le chargement -->
     <link rel="preload" href="style.css" as="style">
@@ -46,6 +46,33 @@
 
     <!-- ✅ (Optionnel) Google AdSense -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script> -->
+
+    <script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "Website",
+    "name": "Diceman's Chaos",
+    "url": "https://yourwebsite.com",
+    "description": "Put Your Fate In A Roll! A fun, chaotic, and engaging game where randomness rules your destiny.",
+    "image": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg",
+    "author": {
+        "@type": "Person",
+        "name": "Mister Fifth"
+    },
+    "publisher": {
+        "@type": "Organization",
+        "name": "Diceman's Chaos",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "https://yourwebsite.com/favicon.ico"
+        }
+    },
+    "sameAs": [
+        "https://www.facebook.com/DiceMansChaos/",
+        "https://ko-fi.com/dicemanschaos"
+    ]
+}
+</script>
 
 </head>
 
