--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         "name": "Diceman's Chaos",
         "logo": {
             "@type": "ImageObject",
-            "url": "https://yourwebsite.com/favicon.ico"
+            "url": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/favicon.ico"
         }
     },
     "sameAs": [
