--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
 }
 </script>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Game",
+  "name": "Diceman's Chaos",
+  "description": "Put your fate in a roll! An interactive game where randomness takes control of your choices.",
+  "applicationCategory": "Game",
+  "operatingSystem": "All",
+  "creator": {
+    "@type": "Person",
+    "name": "Mister Fifth"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Diceman's Chaos"
+  },
+  "image": "https://yourwebsite.com/og-image.jpg",
+  "url": "https://yourwebsite.com",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD"
+  }
+}
+</script>
+    
 </head>
 
   <body>
