--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Diceman's Chaos - Put Your Fate in a Roll">
     <meta property="og:description" content="A fun, chaotic way to let fate decide your next move! Roll the dice and embrace randomness.">
     <meta property="og:image" content="https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg"> 
-    <meta property="og:url" content="https://dicemanschaos.netlify.app">
+    <meta property="og:url" content="https://dicemans-chaos.netlify.app/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Diceman's Chaos - Put Your Fate in a Roll">
@@ -52,7 +52,7 @@
     "@context": "https://schema.org",
     "@type": "Website",
     "name": "Diceman's Chaos",
-    "url": "https://yourwebsite.com",
+    "url": "https://dicemans-chaos.netlify.app/",
     "description": "Put Your Fate In A Roll! A fun, chaotic, and engaging game where randomness rules your destiny.",
     "image": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg",
     "author": {
@@ -91,7 +91,7 @@
     "name": "Diceman's Chaos"
   },
   "image": "https://yourwebsite.com/og-image.jpg",
-  "url": "https://yourwebsite.com",
+  "url": "https://dicemans-chaos.netlify.app/",
   "offers": {
     "@type": "Offer",
     "price": "0.00",
