--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     "@type": "Organization",
     "name": "Diceman's Chaos"
   },
-  "image": "https://yourwebsite.com/og-image.jpg",
+  "image": "https://github.com/GuillaumeB974/Diceman-s-Chaos/blob/main/images/og-image.jpg",
   "url": "https://dicemans-chaos.netlify.app/",
   "offers": {
     "@type": "Offer",
