--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>Need Help? Contact us at <a href="mailto:contact@dicemanschaos.com">contact@dicemanschaos.com</a></p>
+        <p>Need Help? Contact us at <a href="mailto:contact.dicemanschaos@gmail.com">contact.dicemanschaos@gmail.com</a></p>
         <p><a href="index.html">Back to Homepage</a></p>
     </footer>
 
