--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -13,7 +13,7 @@
         <h2>Éditeur du Site</h2>
         <p>Nom du site : Diceman's Chaos</p>
         <p>Responsable de la publication : Mister Fifth</p>
-        <p>Email de contact : adam-desavoy@outlook.com</p>
+        <p>Email de contact : contact.dicemanschaos@gmail.com</p>
         <p>Hébergeur : GitHub Pages / Netlify</p>
         
         <h2>2. Intellectual Property</h2>
@@ -32,7 +32,7 @@
         <p>These legal notices are governed by applicable international and European laws. Any disputes shall be resolved in accordance with the jurisdiction of the website owner’s country of residence.</p>
 
         <h2>6. Contact</h2>
-        <p>Need help or have questions? Contact us at adam-desavoy@outlook.com</p>
+        <p>Need help or have questions? Contact us at contact.dicemanschaos@gmail.com</p>
       
         <a href="index.html">⬅ Retour au site</a>
     </div>
