--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="dice, chaos, random, fate, game, fun, challenge, decision making, randomness">
     <meta name="author" content="Diceman's Chaos Team">
     <meta name="robots" content="index, follow"> <!-- Permet à Google d’indexer le site -->
-    <meta name="google-site-verification" content="YOUR_GOOGLE_VERIFICATION_CODE_HERE"> <!-- À remplacer si besoin -->
+    <meta name="google-site-verification" content="Ic8HLoyZCWYrFreZ9uIo_v1z-e3FaHpU_Ko3MBRidGw" />
 
     <!-- ✅ Open Graph (Facebook, Twitter & Social Sharing) -->
     <meta property="og:title" content="Diceman's Chaos - Put Your Fate in a Roll">
