--- a/index.html
+++ b/index.html
@@ -192,18 +192,20 @@
         </div>
     </div>
 
-      <!-- Footer -->
-        <footer>
-            <div class="footer-container">
-                <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
-                <a href="mentions-legales.html">Legal Notice</a> | 
-                <a href="cookie-policy.html">Cookie Policy</a> | 
-                <a href="privacy-policy.html">Privacy Policy</a> | 
-                <a href="https://www.facebook.com/DiceMansChaos/" target="_blank">Follow us on Facebook</a>
-                <p id="about-section">🎲 <b>About Diceman’s Chaos</b> 🎲 <br>
-                Put your fate in a roll! This project is about embracing randomness and letting destiny guide your choices.</p>
-            </div>
-         </footer>
+      <footer>
+    <div class="footer-container">
+        <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
+        <a href="mentions-legales.html">Legal Notice</a> | 
+        <a href="cookie-policy.html">Cookie Policy</a> | 
+        <a href="privacy-policy.html">Privacy Policy</a> | 
+        <a href="how-it-works.html">How It Works</a> | 
+        <a href="chaos-stories.html">Chaos Stories</a> | 
+        <a href="faq.html">FAQ</a> | 
+        <a href="https://www.facebook.com/DiceMansChaos/" target="_blank">Follow us on Facebook</a>
+        <p id="about-section">🎲 <strong>About Diceman’s Chaos</strong> 🎲 <br>
+        Put your fate in a roll! Embrace the randomness and let destiny guide your choices.</p>
+    </div>
+</footer>
 
     <!-- Bannière de cookies (Placée en dehors de #app) -->
     <div id="cookie-banner" style="display: none;">
