--- a/chaos-stories.html
+++ b/chaos-stories.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaos Stories - Diceman's Chaos</title>
     <link rel="stylesheet" href="style.css">
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1516412260411948"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
