--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Policy - Diceman’s Chaos</title>
     <link rel="stylesheet" href="style.css"> <!-- Utilise votre CSS principal -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1516412260411948"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
