--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
         </div>
         
         <!-- Contrôles de musique et contribution -->
-        <div class="music-control">
-            <button id="play-music">▶️ Play Music</button>
-            <button id="pause-music">⏸ Pause Music</button>
-            <button id="buy-me-button">Buy Me a Coffee</button>
-        </div>
+      <div class="music-coffee-container">
+    <button id="play-music" class="music-button">🎵 Play Music</button>
+    <button id="pause-music" class="music-button">⏸ Pause Music</button>
+    <a href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
+</div>
 
         <!-- Image du DiceMan -->
         <div class="diceman-container">
