--- a/index.html
+++ b/index.html
@@ -113,17 +113,14 @@
         </div>
         
         <!-- Contrôles de musique et contribution -->
-     <div class="music-coffee-container">
-    <button id="play-music" class="music-button">🎵 Play Music</button>
-    <button id="pause-music" class="music-button">⏸ Pause Music</button>
-    <a id="coffee-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
+    <div class="diceman-container">
+    <img src="path_to_diceman_image" alt="Diceman Image" class="diceman-image">
+    <div class="button-container">
+        <button id="play-music" class="music-button">🎵 Play Music</button>
+        <button id="pause-music" class="music-button">⏸ Pause Music</button>
+        <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
+    </div>
 </div>
-
-
-        <!-- Image du DiceMan -->
-        <div class="diceman-container">
-            <img id="diceman-image" src="" alt="Image du DiceMan">
-        </div>
 
        <!-- Phrase d'accroche fixe pour le SEO -->
 <h2 class="seo-title">A completely non-random piece of advice from Mr. Fifth :</h2>
