Update and rename how-it-works.html to how-to-play.html

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How It Works - Diceman's Chaos</title>
+    <title>How to Play - Diceman's Chaos</title>
     <link rel="stylesheet" href="style.css">
  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1516412260411948"
      crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
         <h2>Example:</h2>
         <p><strong>Scenario:</strong> You don’t know what to do today.</p>
         <p>You roll the dice and get: <em>“Sing a song to a stranger – Right now.”</em></p>
-        <p>What do you do? Embrace the chaos or chicken out? 😆</p>
+        <p>What do you do? Embrace the chaos or chicken out? 😈</p>
     </section>
 </main>
 
