--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <a href="mentions-legales.html">Legal Notice</a> | 
         <a href="cookie-policy.html">Cookie Policy</a> | 
         <a href="privacy-policy.html">Privacy Policy</a> | 
-        <a href="how-it-works.html">How It Works</a> | 
+        <a href="how-to-play.html">How to Play</a> | 
         <a href="chaos-stories.html">Chaos Stories</a> | 
         <a href="faq.html">FAQ</a> | 
         <a href="https://www.facebook.com/DiceMansChaos/" target="_blank">Follow us on Facebook</a>
