--- a/index.html
+++ b/index.html
@@ -112,15 +112,24 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
         
-        <!-- Contrôles de musique et contribution -->
-    <div class="diceman-container">
+      <!-- Contrôles de musique et contribution -->
+<div class="diceman-container">
+    <!-- Bouton How to Play à gauche -->
+    <a href="how-to-play.html">
+        <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
+    </a>
+
+    <!-- Image du Diceman -->
     <img src="path_to_diceman_image" alt="Diceman Image" class="diceman-image">
+
+    <!-- Boutons à droite -->
     <div class="button-container">
         <button id="play-music" class="music-button">🎵 Play Music</button>
         <button id="pause-music" class="music-button">⏸ Pause Music</button>
         <a id="buy-me-button" href="https://ko-fi.com/dicemanschaos" target="_blank" class="coffee-button">☕ Buy Me a Coffee</a>
     </div>
 </div>
+
 
        <!-- Phrase d'accroche fixe pour le SEO -->
 <h2 class="seo-title">A completely non-random piece of advice from Mr. Fifth :</h2>
