--- a/index.html
+++ b/index.html
@@ -203,16 +203,36 @@
 
       <footer>
     <div class="footer-container">
-        <p>&copy; 2025 Diceman's Chaos - All rights reserved.</p>
-        <a href="mentions-legales.html">Legal Notice</a> | 
-        <a href="cookie-policy.html">Cookie Policy</a> | 
-        <a href="privacy-policy.html">Privacy Policy</a> | 
-        <a href="how-to-play.html">How to Play</a> | 
-        <a href="chaos-stories.html">Chaos Stories</a> | 
-        <a href="faq.html">FAQ</a> | 
-        <a href="https://www.facebook.com/DiceMansChaos/" target="_blank">Follow us on Facebook</a>
-        <p id="about-section">🎲 <strong>About Diceman’s Chaos</strong> 🎲 <br>
-        Put your fate in a roll! Embrace the randomness and let destiny guide your choices.</p>
+        <!-- Première ligne : Liens principaux -->
+        <div class="footer-section">
+            <a href="how-to-play.html">🎲 How to Play</a> |
+            <a href="chaos-stories.html">📖 Chaos Stories</a> |
+            <a href="faq.html">❓ FAQ</a>
+        </div>
+
+        <!-- Deuxième ligne : Réseaux sociaux et Projet Dicemen -->
+        <div class="footer-section footer-highlight">
+            <a href="https://www.facebook.com/DiceMansChaos" target="_blank">📘 Follow us on Facebook</a> |
+            <a href="dicemen-project.html">🎭 Dicemen Project</a>
+        </div>
+
+        <!-- Troisième ligne : Mentions légales -->
+        <div class="footer-section">
+            <a href="legal-notices.html">📜 Legal Notice</a> |
+            <a href="cookie-policy.html">🍪 Cookie Policy</a> |
+            <a href="privacy-policy.html">🔒 Privacy Policy</a>
+        </div>
+
+        <!-- Slogan Diceman’s Chaos -->
+        <div class="footer-section footer-slogan">
+            <p>🎲 About Diceman’s Chaos 🎲</p>
+            <p>Put your fate in a roll! Embrace the randomness and let destiny guide your choices.</p>
+        </div>
+
+        <!-- Droits d’auteur -->
+        <div class="footer-section">
+            <p>© 2025 Diceman's Chaos - All rights reserved.</p>
+        </div>
     </div>
 </footer>
 
