--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         <img src="images/dice-how-to-play.png" alt="How to Play" class="how-to-play-img">
     </a>
 
-    <!-- Image du Diceman -->
-    <img src="path_to_diceman_image" alt="Diceman Image" class="diceman-image">
-
+<!-- Image du DiceMan -->
+        <div class="diceman-container">
+            <img id="diceman-image" src="" alt="Image du DiceMan">
+        </div
+            
     <!-- Boutons à droite -->
     <div class="button-container">
         <button id="play-music" class="music-button">🎵 Play Music</button>
