--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <!-- Espace réservé pour une future image -->
         <div class="extra-image-container">
-            <img src="images/extra-image.jpg" alt="Extra Image" class="extra-image">
+            <img src="images/extra-image.png" alt="Extra Image" class="extra-image">
         </div>
 
         <!-- Conteneur principal pour Diceman, boutons et How to Play -->
