--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             <img id="banner-image" src="" alt="Bannière thématique">
         </div>
 
-        <!-- Espace réservé pour une future image -->
-        <div class="extra-image-container">
-            <img src="images/extra-image.png" alt="Extra Image" class="extra-image">
-        </div>
+       <!-- Extra Image sous la bannière -->
+<div class="extra-image-container">
+    <img id="extra-image" src="" alt="Put Your Fate In A Roll">
+</div>
 
         <!-- Conteneur principal pour Diceman, boutons et How to Play -->
         <div class="diceman-wrapper">
